src/BackEnd/Language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INIT
Rule 1     INIT -> INSTRUCTIONS
Rule 2     INIT -> <empty>
Rule 3     INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION
Rule 4     INSTRUCTIONS -> INSTRUCTION
Rule 5     INSTRUCTION -> CREATETABLE TK_semicolon
Rule 6     INSTRUCTION -> ALTERTAB TK_semicolon
Rule 7     INSTRUCTION -> DROPTAB TK_semicolon
Rule 8     INSTRUCTION -> INSERTREG TK_semicolon
Rule 9     INSTRUCTION -> UPDATETAB TK_semicolon
Rule 10    INSTRUCTION -> TRUNCATETAB TK_semicolon
Rule 11    INSTRUCTION -> DELETETAB TK_semicolon
Rule 12    INSTRUCTION -> SELECT TK_semicolon
Rule 13    INSTRUCTION -> DECLAREID TK_semicolon
Rule 14    INSTRUCTION -> ASIGNID TK_semicolon
Rule 15    INSTRUCTION -> IFSTRUCT TK_semicolon
Rule 16    INSTRUCTION -> CASESTRUCT_S TK_semicolon
Rule 17    INSTRUCTION -> WHILESTRUCT TK_semicolon
Rule 18    INSTRUCTION -> FORSTRUCT TK_semicolon
Rule 19    INSTRUCTION -> FUNCDEC TK_semicolon
Rule 20    INSTRUCTION -> CALLFUNC TK_semicolon
Rule 21    INSTRUCTION -> ENCAP TK_semicolon
Rule 22    INSTRUCTION -> PRINT TK_semicolon
Rule 23    INSTRUCTION -> RW_break TK_semicolon
Rule 24    INSTRUCTION -> RW_continue TK_semicolon
Rule 25    INSTRUCTION -> RW_return EXP TK_semicolon
Rule 26    INSTRUCTION -> RW_return TK_semicolon
Rule 27    DECLAREID -> RW_declare DECLIDS
Rule 28    DECLAREID -> RW_declare TK_id TYPE TK_equal EXP
Rule 29    DECLAREID -> RW_declare TK_id TYPE RW_default EXP
Rule 30    DECLIDS -> DECLIDS TK_comma DECLID
Rule 31    DECLIDS -> DECLID
Rule 32    DECLID -> TK_id TYPE
Rule 33    ASIGNID -> RW_set TK_id TK_equal EXP
Rule 34    SELECT -> RW_select FIELDS RW_from TK_field RW_where EXP
Rule 35    SELECT -> RW_select FIELDS RW_from TK_field
Rule 36    SELECT -> RW_select LIST_IDS
Rule 37    FIELDS -> LIST_IDS
Rule 38    FIELDS -> TK_mult
Rule 39    LIST_IDS -> LIST_IDS TK_comma IDS
Rule 40    LIST_IDS -> IDS
Rule 41    IDS -> EXP RW_as TK_varchar
Rule 42    IDS -> EXP RW_as TK_field
Rule 43    IDS -> EXP
Rule 44    CREATETABLE -> RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
Rule 45    ATTRIBUTES -> ATTRIBUTES TK_comma ATTRIBUTE
Rule 46    ATTRIBUTES -> ATTRIBUTE
Rule 47    ATTRIBUTE -> TK_field TYPE
Rule 48    ALTERTAB -> RW_alter RW_table TK_field ACTION
Rule 49    ACTION -> RW_add TK_field TYPE
Rule 50    ACTION -> RW_drop RW_column TK_field
Rule 51    ACTION -> RW_rename RW_to TK_field
Rule 52    ACTION -> RW_rename RW_column TK_field RW_to TK_field
Rule 53    DROPTAB -> RW_drop RW_table TK_field
Rule 54    INSERTREG -> RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
Rule 55    LIST_ATTRIBS -> LIST_ATTRIBS TK_comma TK_field
Rule 56    LIST_ATTRIBS -> TK_field
Rule 57    LIST_EXPS -> LIST_EXPS TK_comma EXP
Rule 58    LIST_EXPS -> EXP
Rule 59    UPDATETAB -> RW_update TK_field RW_set VALUESTAB RW_where EXP
Rule 60    VALUESTAB -> VALUESTAB TK_comma VALUETAB
Rule 61    VALUESTAB -> VALUETAB
Rule 62    VALUETAB -> TK_field TK_equal EXP
Rule 63    TRUNCATETAB -> RW_truncate RW_table TK_field
Rule 64    DELETETAB -> RW_delete RW_from TK_field RW_where EXP
Rule 65    IFSTRUCT -> RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
Rule 66    IFSTRUCT -> RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
Rule 67    IFSTRUCT -> RW_if EXP RW_begin INSTRUCTIONS RW_end
Rule 68    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end RW_as TK_field
Rule 69    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end RW_as TK_varchar
Rule 70    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end
Rule 71    CASESTRUCT_S -> RW_case WHENELSE RW_end RW_as TK_field
Rule 72    CASESTRUCT_S -> RW_case WHENELSE RW_end RW_as TK_varchar
Rule 73    CASESTRUCT_S -> RW_case WHENELSE RW_end
Rule 74    WHENELSE -> WHENS ELSE
Rule 75    WHENELSE -> WHENS
Rule 76    WHENELSE -> ELSE
Rule 77    WHENS -> WHENS WHEN
Rule 78    WHENS -> WHEN
Rule 79    WHEN -> RW_when EXP RW_then EXP
Rule 80    ELSE -> RW_else EXP
Rule 81    PRINT -> RW_print EXP
Rule 82    WHILESTRUCT -> RW_while EXP ENCAP
Rule 83    FORSTRUCT -> RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
Rule 84    FUNCDEC -> RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
Rule 85    FUNCDEC -> RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
Rule 86    FUNCDEC -> RW_create RW_procedure TK_field PARAMS RW_as ENCAP
Rule 87    FUNCDEC -> RW_create RW_procedure TK_field RW_as ENCAP
Rule 88    FUNCDEC -> RW_create RW_procedure TK_field PARAMS ENCAP
Rule 89    FUNCDEC -> RW_create RW_procedure TK_field ENCAP
Rule 90    PARAMS -> PARAMS TK_comma PARAM
Rule 91    PARAMS -> PARAM
Rule 92    PARAM -> TK_id TYPE
Rule 93    ENCAP -> RW_begin INSTRUCTIONS RW_end
Rule 94    ENCAP -> RW_begin RW_end
Rule 95    CALLFUNC -> TK_field TK_lpar ARGS TK_rpar
Rule 96    CALLFUNC -> TK_field TK_lpar TK_rpar
Rule 97    ARGS -> ARGS TK_comma EXP
Rule 98    ARGS -> EXP
Rule 99    EXP -> ARITHMETICS
Rule 100   EXP -> RELATIONALS
Rule 101   EXP -> LOGICS
Rule 102   EXP -> CAST
Rule 103   EXP -> NATIVEFUNC
Rule 104   EXP -> CALLFUNC
Rule 105   EXP -> TK_id
Rule 106   EXP -> TK_field
Rule 107   EXP -> TK_varchar
Rule 108   EXP -> TK_int
Rule 109   EXP -> TK_double
Rule 110   EXP -> TK_date
Rule 111   EXP -> RW_true
Rule 112   EXP -> RW_false
Rule 113   EXP -> RW_null
Rule 114   EXP -> TK_lpar EXP TK_rpar
Rule 115   ARITHMETICS -> EXP TK_plus EXP
Rule 116   ARITHMETICS -> EXP TK_minus EXP
Rule 117   ARITHMETICS -> EXP TK_mult EXP
Rule 118   ARITHMETICS -> EXP TK_div EXP
Rule 119   ARITHMETICS -> EXP TK_mod EXP
Rule 120   ARITHMETICS -> TK_minus EXP
Rule 121   RELATIONALS -> EXP TK_equal EXP
Rule 122   RELATIONALS -> EXP TK_notequal EXP
Rule 123   RELATIONALS -> EXP TK_lessequal EXP
Rule 124   RELATIONALS -> EXP TK_greatequal EXP
Rule 125   RELATIONALS -> EXP TK_less EXP
Rule 126   RELATIONALS -> EXP TK_great EXP
Rule 127   LOGICS -> EXP RW_and EXP
Rule 128   LOGICS -> EXP RW_or EXP
Rule 129   LOGICS -> RW_not EXP
Rule 130   CAST -> RW_cast TK_lpar EXP RW_as TYPE TK_rpar
Rule 131   NATIVEFUNC -> RW_lower TK_lpar EXP TK_rpar
Rule 132   NATIVEFUNC -> RW_upper TK_lpar EXP TK_rpar
Rule 133   NATIVEFUNC -> RW_round TK_lpar EXP TK_comma EXP TK_rpar
Rule 134   NATIVEFUNC -> RW_len TK_lpar EXP TK_rpar
Rule 135   NATIVEFUNC -> RW_truncate TK_lpar EXP TK_comma EXP TK_rpar
Rule 136   NATIVEFUNC -> RW_typeof TK_lpar EXP TK_rpar
Rule 137   TYPE -> RW_int
Rule 138   TYPE -> RW_double
Rule 139   TYPE -> RW_date
Rule 140   TYPE -> RW_varchar
Rule 141   TYPE -> RW_boolean

Terminals, with rules where they appear

RW_add               : 49
RW_alter             : 48
RW_and               : 127
RW_as                : 41 42 68 69 71 72 86 87 130
RW_begin             : 67 93 94
RW_boolean           : 141
RW_break             : 23
RW_case              : 68 69 70 71 72 73
RW_cast              : 130
RW_column            : 50 52
RW_continue          : 24
RW_create            : 44 84 85 86 87 88 89
RW_date              : 139
RW_declare           : 27 28 29
RW_default           : 29
RW_delete            : 64
RW_double            : 138
RW_drop              : 50 53
RW_else              : 65 80
RW_end               : 65 66 67 68 69 70 71 72 73 93 94
RW_false             : 112
RW_for               : 83
RW_from              : 34 35 64
RW_function          : 84 85
RW_if                : 65 65 66 66 67
RW_in                : 83
RW_insert            : 54
RW_int               : 137
RW_into              : 54
RW_len               : 134
RW_loop              : 83
RW_lower             : 131
RW_not               : 129
RW_null              : 113
RW_or                : 128
RW_print             : 81
RW_procedure         : 86 87 88 89
RW_rename            : 51 52
RW_return            : 25 26
RW_returns           : 84 85
RW_round             : 133
RW_select            : 34 35 36
RW_set               : 33 59
RW_table             : 44 48 53 63
RW_then              : 65 66 79
RW_to                : 51 52
RW_true              : 111
RW_truncate          : 63 135
RW_typeof            : 136
RW_update            : 59
RW_upper             : 132
RW_values            : 54
RW_varchar           : 140
RW_when              : 79
RW_where             : 34 59 64
RW_while             : 82
TK_comma             : 30 39 45 55 57 60 90 97 133 135
TK_date              : 110
TK_div               : 118
TK_dot               : 83
TK_double            : 109
TK_equal             : 28 33 62 121
TK_field             : 34 35 42 44 47 48 49 50 51 52 52 53 54 55 56 59 62 63 64 68 71 84 85 86 87 88 89 95 96 106
TK_great             : 126
TK_greatequal        : 124
TK_id                : 28 29 32 33 83 92 105
TK_int               : 108
TK_less              : 125
TK_lessequal         : 123
TK_lpar              : 44 54 54 84 85 95 96 114 130 131 132 133 134 135 136
TK_minus             : 116 120
TK_mod               : 119
TK_mult              : 38 117
TK_notequal          : 122
TK_plus              : 115
TK_rpar              : 44 54 54 84 85 95 96 114 130 131 132 133 134 135 136
TK_semicolon         : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
TK_varchar           : 41 69 72 107
error                : 

Nonterminals, with rules where they appear

ACTION               : 48
ALTERTAB             : 6
ARGS                 : 95 97
ARITHMETICS          : 99
ASIGNID              : 14
ATTRIBUTE            : 45 46
ATTRIBUTES           : 44 45
CALLFUNC             : 20 104
CASESTRUCT_S         : 16
CAST                 : 102
CREATETABLE          : 5
DECLAREID            : 13
DECLID               : 30 31
DECLIDS              : 27 30
DELETETAB            : 11
DROPTAB              : 7
ELSE                 : 74 76
ENCAP                : 21 82 83 84 85 86 87 88 89
EXP                  : 25 28 29 33 34 41 42 43 57 58 59 62 64 65 66 67 68 69 70 79 79 80 81 82 83 83 97 98 114 115 115 116 116 117 117 118 118 119 119 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 130 131 132 133 133 134 135 135 136
FIELDS               : 34 35
FORSTRUCT            : 18
FUNCDEC              : 19
IDS                  : 39 40
IFSTRUCT             : 15
INIT                 : 0
INSERTREG            : 8
INSTRUCTION          : 3 4
INSTRUCTIONS         : 1 3 65 65 66 67 93
LIST_ATTRIBS         : 54 55
LIST_EXPS            : 54 57
LIST_IDS             : 36 37 39
LOGICS               : 101
NATIVEFUNC           : 103
PARAM                : 90 91
PARAMS               : 84 86 88 90
PRINT                : 22
RELATIONALS          : 100
SELECT               : 12
TRUNCATETAB          : 10
TYPE                 : 28 29 32 47 49 84 85 92 130
UPDATETAB            : 9
VALUESTAB            : 59 60
VALUETAB             : 60 61
WHEN                 : 77 78
WHENELSE             : 68 69 70 71 72 73
WHENS                : 74 75 77
WHILESTRUCT          : 17

Parsing method: LALR

state 0

    (0) S' -> . INIT
    (1) INIT -> . INSTRUCTIONS
    (2) INIT -> .
    (3) INSTRUCTIONS -> . INSTRUCTIONS INSTRUCTION
    (4) INSTRUCTIONS -> . INSTRUCTION
    (5) INSTRUCTION -> . CREATETABLE TK_semicolon
    (6) INSTRUCTION -> . ALTERTAB TK_semicolon
    (7) INSTRUCTION -> . DROPTAB TK_semicolon
    (8) INSTRUCTION -> . INSERTREG TK_semicolon
    (9) INSTRUCTION -> . UPDATETAB TK_semicolon
    (10) INSTRUCTION -> . TRUNCATETAB TK_semicolon
    (11) INSTRUCTION -> . DELETETAB TK_semicolon
    (12) INSTRUCTION -> . SELECT TK_semicolon
    (13) INSTRUCTION -> . DECLAREID TK_semicolon
    (14) INSTRUCTION -> . ASIGNID TK_semicolon
    (15) INSTRUCTION -> . IFSTRUCT TK_semicolon
    (16) INSTRUCTION -> . CASESTRUCT_S TK_semicolon
    (17) INSTRUCTION -> . WHILESTRUCT TK_semicolon
    (18) INSTRUCTION -> . FORSTRUCT TK_semicolon
    (19) INSTRUCTION -> . FUNCDEC TK_semicolon
    (20) INSTRUCTION -> . CALLFUNC TK_semicolon
    (21) INSTRUCTION -> . ENCAP TK_semicolon
    (22) INSTRUCTION -> . PRINT TK_semicolon
    (23) INSTRUCTION -> . RW_break TK_semicolon
    (24) INSTRUCTION -> . RW_continue TK_semicolon
    (25) INSTRUCTION -> . RW_return EXP TK_semicolon
    (26) INSTRUCTION -> . RW_return TK_semicolon
    (44) CREATETABLE -> . RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
    (48) ALTERTAB -> . RW_alter RW_table TK_field ACTION
    (53) DROPTAB -> . RW_drop RW_table TK_field
    (54) INSERTREG -> . RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
    (59) UPDATETAB -> . RW_update TK_field RW_set VALUESTAB RW_where EXP
    (63) TRUNCATETAB -> . RW_truncate RW_table TK_field
    (64) DELETETAB -> . RW_delete RW_from TK_field RW_where EXP
    (34) SELECT -> . RW_select FIELDS RW_from TK_field RW_where EXP
    (35) SELECT -> . RW_select FIELDS RW_from TK_field
    (36) SELECT -> . RW_select LIST_IDS
    (27) DECLAREID -> . RW_declare DECLIDS
    (28) DECLAREID -> . RW_declare TK_id TYPE TK_equal EXP
    (29) DECLAREID -> . RW_declare TK_id TYPE RW_default EXP
    (33) ASIGNID -> . RW_set TK_id TK_equal EXP
    (65) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
    (66) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
    (67) IFSTRUCT -> . RW_if EXP RW_begin INSTRUCTIONS RW_end
    (68) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_field
    (69) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_varchar
    (70) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end
    (71) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_field
    (72) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_varchar
    (73) CASESTRUCT_S -> . RW_case WHENELSE RW_end
    (82) WHILESTRUCT -> . RW_while EXP ENCAP
    (83) FORSTRUCT -> . RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
    (84) FUNCDEC -> . RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
    (85) FUNCDEC -> . RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
    (86) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS RW_as ENCAP
    (87) FUNCDEC -> . RW_create RW_procedure TK_field RW_as ENCAP
    (88) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS ENCAP
    (89) FUNCDEC -> . RW_create RW_procedure TK_field ENCAP
    (95) CALLFUNC -> . TK_field TK_lpar ARGS TK_rpar
    (96) CALLFUNC -> . TK_field TK_lpar TK_rpar
    (93) ENCAP -> . RW_begin INSTRUCTIONS RW_end
    (94) ENCAP -> . RW_begin RW_end
    (81) PRINT -> . RW_print EXP

    $end            reduce using rule 2 (INIT -> .)
    RW_break        shift and go to state 22
    RW_continue     shift and go to state 23
    RW_return       shift and go to state 24
    RW_create       shift and go to state 25
    RW_alter        shift and go to state 27
    RW_drop         shift and go to state 28
    RW_insert       shift and go to state 29
    RW_update       shift and go to state 30
    RW_truncate     shift and go to state 32
    RW_delete       shift and go to state 33
    RW_select       shift and go to state 34
    RW_declare      shift and go to state 35
    RW_set          shift and go to state 31
    RW_if           shift and go to state 36
    RW_case         shift and go to state 38
    RW_while        shift and go to state 39
    RW_for          shift and go to state 40
    TK_field        shift and go to state 26
    RW_begin        shift and go to state 37
    RW_print        shift and go to state 41

    INIT                           shift and go to state 1
    INSTRUCTIONS                   shift and go to state 2
    INSTRUCTION                    shift and go to state 3
    CREATETABLE                    shift and go to state 4
    ALTERTAB                       shift and go to state 5
    DROPTAB                        shift and go to state 6
    INSERTREG                      shift and go to state 7
    UPDATETAB                      shift and go to state 8
    TRUNCATETAB                    shift and go to state 9
    DELETETAB                      shift and go to state 10
    SELECT                         shift and go to state 11
    DECLAREID                      shift and go to state 12
    ASIGNID                        shift and go to state 13
    IFSTRUCT                       shift and go to state 14
    CASESTRUCT_S                   shift and go to state 15
    WHILESTRUCT                    shift and go to state 16
    FORSTRUCT                      shift and go to state 17
    FUNCDEC                        shift and go to state 18
    CALLFUNC                       shift and go to state 19
    ENCAP                          shift and go to state 20
    PRINT                          shift and go to state 21

state 1

    (0) S' -> INIT .



state 2

    (1) INIT -> INSTRUCTIONS .
    (3) INSTRUCTIONS -> INSTRUCTIONS . INSTRUCTION
    (5) INSTRUCTION -> . CREATETABLE TK_semicolon
    (6) INSTRUCTION -> . ALTERTAB TK_semicolon
    (7) INSTRUCTION -> . DROPTAB TK_semicolon
    (8) INSTRUCTION -> . INSERTREG TK_semicolon
    (9) INSTRUCTION -> . UPDATETAB TK_semicolon
    (10) INSTRUCTION -> . TRUNCATETAB TK_semicolon
    (11) INSTRUCTION -> . DELETETAB TK_semicolon
    (12) INSTRUCTION -> . SELECT TK_semicolon
    (13) INSTRUCTION -> . DECLAREID TK_semicolon
    (14) INSTRUCTION -> . ASIGNID TK_semicolon
    (15) INSTRUCTION -> . IFSTRUCT TK_semicolon
    (16) INSTRUCTION -> . CASESTRUCT_S TK_semicolon
    (17) INSTRUCTION -> . WHILESTRUCT TK_semicolon
    (18) INSTRUCTION -> . FORSTRUCT TK_semicolon
    (19) INSTRUCTION -> . FUNCDEC TK_semicolon
    (20) INSTRUCTION -> . CALLFUNC TK_semicolon
    (21) INSTRUCTION -> . ENCAP TK_semicolon
    (22) INSTRUCTION -> . PRINT TK_semicolon
    (23) INSTRUCTION -> . RW_break TK_semicolon
    (24) INSTRUCTION -> . RW_continue TK_semicolon
    (25) INSTRUCTION -> . RW_return EXP TK_semicolon
    (26) INSTRUCTION -> . RW_return TK_semicolon
    (44) CREATETABLE -> . RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
    (48) ALTERTAB -> . RW_alter RW_table TK_field ACTION
    (53) DROPTAB -> . RW_drop RW_table TK_field
    (54) INSERTREG -> . RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
    (59) UPDATETAB -> . RW_update TK_field RW_set VALUESTAB RW_where EXP
    (63) TRUNCATETAB -> . RW_truncate RW_table TK_field
    (64) DELETETAB -> . RW_delete RW_from TK_field RW_where EXP
    (34) SELECT -> . RW_select FIELDS RW_from TK_field RW_where EXP
    (35) SELECT -> . RW_select FIELDS RW_from TK_field
    (36) SELECT -> . RW_select LIST_IDS
    (27) DECLAREID -> . RW_declare DECLIDS
    (28) DECLAREID -> . RW_declare TK_id TYPE TK_equal EXP
    (29) DECLAREID -> . RW_declare TK_id TYPE RW_default EXP
    (33) ASIGNID -> . RW_set TK_id TK_equal EXP
    (65) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
    (66) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
    (67) IFSTRUCT -> . RW_if EXP RW_begin INSTRUCTIONS RW_end
    (68) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_field
    (69) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_varchar
    (70) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end
    (71) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_field
    (72) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_varchar
    (73) CASESTRUCT_S -> . RW_case WHENELSE RW_end
    (82) WHILESTRUCT -> . RW_while EXP ENCAP
    (83) FORSTRUCT -> . RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
    (84) FUNCDEC -> . RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
    (85) FUNCDEC -> . RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
    (86) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS RW_as ENCAP
    (87) FUNCDEC -> . RW_create RW_procedure TK_field RW_as ENCAP
    (88) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS ENCAP
    (89) FUNCDEC -> . RW_create RW_procedure TK_field ENCAP
    (95) CALLFUNC -> . TK_field TK_lpar ARGS TK_rpar
    (96) CALLFUNC -> . TK_field TK_lpar TK_rpar
    (93) ENCAP -> . RW_begin INSTRUCTIONS RW_end
    (94) ENCAP -> . RW_begin RW_end
    (81) PRINT -> . RW_print EXP

    $end            reduce using rule 1 (INIT -> INSTRUCTIONS .)
    RW_break        shift and go to state 22
    RW_continue     shift and go to state 23
    RW_return       shift and go to state 24
    RW_create       shift and go to state 25
    RW_alter        shift and go to state 27
    RW_drop         shift and go to state 28
    RW_insert       shift and go to state 29
    RW_update       shift and go to state 30
    RW_truncate     shift and go to state 32
    RW_delete       shift and go to state 33
    RW_select       shift and go to state 34
    RW_declare      shift and go to state 35
    RW_set          shift and go to state 31
    RW_if           shift and go to state 36
    RW_case         shift and go to state 38
    RW_while        shift and go to state 39
    RW_for          shift and go to state 40
    TK_field        shift and go to state 26
    RW_begin        shift and go to state 37
    RW_print        shift and go to state 41

    INSTRUCTION                    shift and go to state 42
    CREATETABLE                    shift and go to state 4
    ALTERTAB                       shift and go to state 5
    DROPTAB                        shift and go to state 6
    INSERTREG                      shift and go to state 7
    UPDATETAB                      shift and go to state 8
    TRUNCATETAB                    shift and go to state 9
    DELETETAB                      shift and go to state 10
    SELECT                         shift and go to state 11
    DECLAREID                      shift and go to state 12
    ASIGNID                        shift and go to state 13
    IFSTRUCT                       shift and go to state 14
    CASESTRUCT_S                   shift and go to state 15
    WHILESTRUCT                    shift and go to state 16
    FORSTRUCT                      shift and go to state 17
    FUNCDEC                        shift and go to state 18
    CALLFUNC                       shift and go to state 19
    ENCAP                          shift and go to state 20
    PRINT                          shift and go to state 21

state 3

    (4) INSTRUCTIONS -> INSTRUCTION .

    RW_break        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_continue     reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_return       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_create       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_alter        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_drop         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_insert       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_update       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_truncate     reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_delete       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_select       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_declare      reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_set          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_if           reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_case         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_while        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_for          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    TK_field        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_begin        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_print        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    $end            reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_end          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_else         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)


state 4

    (5) INSTRUCTION -> CREATETABLE . TK_semicolon

    TK_semicolon    shift and go to state 43


state 5

    (6) INSTRUCTION -> ALTERTAB . TK_semicolon

    TK_semicolon    shift and go to state 44


state 6

    (7) INSTRUCTION -> DROPTAB . TK_semicolon

    TK_semicolon    shift and go to state 45


state 7

    (8) INSTRUCTION -> INSERTREG . TK_semicolon

    TK_semicolon    shift and go to state 46


state 8

    (9) INSTRUCTION -> UPDATETAB . TK_semicolon

    TK_semicolon    shift and go to state 47


state 9

    (10) INSTRUCTION -> TRUNCATETAB . TK_semicolon

    TK_semicolon    shift and go to state 48


state 10

    (11) INSTRUCTION -> DELETETAB . TK_semicolon

    TK_semicolon    shift and go to state 49


state 11

    (12) INSTRUCTION -> SELECT . TK_semicolon

    TK_semicolon    shift and go to state 50


state 12

    (13) INSTRUCTION -> DECLAREID . TK_semicolon

    TK_semicolon    shift and go to state 51


state 13

    (14) INSTRUCTION -> ASIGNID . TK_semicolon

    TK_semicolon    shift and go to state 52


state 14

    (15) INSTRUCTION -> IFSTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 53


state 15

    (16) INSTRUCTION -> CASESTRUCT_S . TK_semicolon

    TK_semicolon    shift and go to state 54


state 16

    (17) INSTRUCTION -> WHILESTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 55


state 17

    (18) INSTRUCTION -> FORSTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 56


state 18

    (19) INSTRUCTION -> FUNCDEC . TK_semicolon

    TK_semicolon    shift and go to state 57


state 19

    (20) INSTRUCTION -> CALLFUNC . TK_semicolon

    TK_semicolon    shift and go to state 58


state 20

    (21) INSTRUCTION -> ENCAP . TK_semicolon

    TK_semicolon    shift and go to state 59


state 21

    (22) INSTRUCTION -> PRINT . TK_semicolon

    TK_semicolon    shift and go to state 60


state 22

    (23) INSTRUCTION -> RW_break . TK_semicolon

    TK_semicolon    shift and go to state 61


state 23

    (24) INSTRUCTION -> RW_continue . TK_semicolon

    TK_semicolon    shift and go to state 62


state 24

    (25) INSTRUCTION -> RW_return . EXP TK_semicolon
    (26) INSTRUCTION -> RW_return . TK_semicolon
    (99) EXP -> . ARITHMETICS
    (100) EXP -> . RELATIONALS
    (101) EXP -> . LOGICS
    (102) EXP -> . CAST
    (103) EXP -> . NATIVEFUNC
    (104) EXP -> . CALLFUNC
    (105) EXP -> . TK_id
    (106) EXP -> . TK_field
    (107) EXP -> . TK_varchar
    (108) EXP -> . TK_int
    (109) EXP -> . TK_double
    (110) EXP -> . TK_date
    (111) EXP -> . RW_true
    (112) EXP -> . RW_false
    (113) EXP -> . RW_null
    (114) EXP -> . TK_lpar EXP TK_rpar
    (115) ARITHMETICS -> . EXP TK_plus EXP
    (116) ARITHMETICS -> . EXP TK_minus EXP
    (117) ARITHMETICS -> . EXP TK_mult EXP
    (118) ARITHMETICS -> . EXP TK_div EXP
    (119) ARITHMETICS -> . EXP TK_mod EXP
    (120) ARITHMETICS -> . TK_minus EXP
    (121) RELATIONALS -> . EXP TK_equal EXP
    (122) RELATIONALS -> . EXP TK_notequal EXP
    (123) RELATIONALS -> . EXP TK_lessequal EXP
    (124) RELATIONALS -> . EXP TK_greatequal EXP
    (125) RELATIONALS -> . EXP TK_less EXP
    (126) RELATIONALS -> . EXP TK_great EXP
    (127) LOGICS -> . EXP RW_and EXP
    (128) LOGICS -> . EXP RW_or EXP
    (129) LOGICS -> . RW_not EXP
    (130) CAST -> . RW_cast TK_lpar EXP RW_as TYPE TK_rpar
    (131) NATIVEFUNC -> . RW_lower TK_lpar EXP TK_rpar
    (132) NATIVEFUNC -> . RW_upper TK_lpar EXP TK_rpar
    (133) NATIVEFUNC -> . RW_round TK_lpar EXP TK_comma EXP TK_rpar
    (134) NATIVEFUNC -> . RW_len TK_lpar EXP TK_rpar
    (135) NATIVEFUNC -> . RW_truncate TK_lpar EXP TK_comma EXP TK_rpar
    (136) NATIVEFUNC -> . RW_typeof TK_lpar EXP TK_rpar
    (95) CALLFUNC -> . TK_field TK_lpar ARGS TK_rpar
    (96) CALLFUNC -> . TK_field TK_lpar TK_rpar
